--- a/style/output.css
+++ b/style/output.css
@@ -570,6 +570,12 @@ video {
   }
 }
 
+@media (min-width: 991px) {
+  .container {
+    max-width: 991px;
+  }
+}
+
 @media (min-width: 1024px) {
   .container {
     max-width: 1024px;
@@ -604,6 +610,14 @@ video {
   box-shadow: 0 2px 8px 0 rgba(62,62,79,.23);
 }
 
+.color-hover-pink {
+  transition: color .2s;
+}
+
+.color-hover-pink:hover {
+  color: #f1556b;
+}
+
 /* ... */
 
 .fixed {
@@ -622,16 +636,28 @@ video {
   top: -100%;
 }
 
+.bottom-1 {
+  bottom: 0.25rem;
+}
+
+.bottom-5 {
+  bottom: 1.25rem;
+}
+
+.left-5 {
+  left: 1.25rem;
+}
+
+.right-1 {
+  right: 0.25rem;
+}
+
 .top-1\.5 {
   top: 0.375rem;
 }
 
 .top-\[110\%\] {
   top: 110%;
-}
-
-.top-full {
-  top: 100%;
 }
 
 .z-\[1000\] {
@@ -642,8 +668,36 @@ video {
   z-index: 20000;
 }
 
+.m-auto {
+  margin: auto;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-2\.5 {
+  margin-bottom: 0.625rem;
+}
+
+.me-0\.5 {
+  margin-inline-end: 0.125rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
+}
+
 .mt-5 {
   margin-top: 1.25rem;
+}
+
+.mb-\[15px\] {
+  margin-bottom: 15px;
+}
+
+.mb-12 {
+  margin-bottom: 3rem;
 }
 
 .block {
@@ -652,6 +706,18 @@ video {
 
 .flex {
   display: flex;
+}
+
+.grid {
+  display: grid;
+}
+
+.hidden {
+  display: none;
+}
+
+.h-11 {
+  height: 2.75rem;
 }
 
 .h-3\.5 {
@@ -666,6 +732,14 @@ video {
   height: 1.5rem;
 }
 
+.h-\[200px\] {
+  height: 200px;
+}
+
+.h-\[355px\] {
+  height: 355px;
+}
+
 .h-\[3px\] {
   height: 3px;
 }
@@ -678,12 +752,40 @@ video {
   height: 100%;
 }
 
+.h-\[\] {
+  height: ;
+}
+
+.h-\[135p\] {
+  height: 135p;
+}
+
+.h-\[135px\] {
+  height: 135px;
+}
+
+.h-\[185px\] {
+  height: 185px;
+}
+
+.min-h-dvh {
+  min-height: 100dvh;
+}
+
+.w-11 {
+  width: 2.75rem;
+}
+
 .w-2\/3 {
   width: 66.666667%;
 }
 
 .w-3\.5 {
   width: 0.875rem;
+}
+
+.w-3\/4 {
+  width: 75%;
 }
 
 .w-5 {
@@ -702,6 +804,18 @@ video {
   width: 265px;
 }
 
+.w-\[34\%\] {
+  width: 34%;
+}
+
+.w-\[45\%\] {
+  width: 45%;
+}
+
+.w-\[690px\] {
+  width: 690px;
+}
+
 .w-\[90px\] {
   width: 90px;
 }
@@ -710,16 +824,41 @@ video {
   width: 100%;
 }
 
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
 .max-w-\[780px\] {
   max-width: 780px;
+}
+
+.max-w-\[200px\] {
+  max-width: 200px;
+}
+
+.flex-\[66\.6\%\] {
+  flex: 66.6%;
 }
 
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
 .flex-col {
   flex-direction: column;
+}
+
+.flex-col-reverse {
+  flex-direction: column-reverse;
+}
+
+.items-start {
+  align-items: flex-start;
 }
 
 .items-end {
@@ -738,6 +877,10 @@ video {
   justify-content: space-between;
 }
 
+.justify-around {
+  justify-content: space-around;
+}
+
 .gap-0\.5 {
   gap: 0.125rem;
 }
@@ -750,6 +893,10 @@ video {
   gap: 0.375rem;
 }
 
+.gap-10 {
+  gap: 2.5rem;
+}
+
 .gap-2 {
   gap: 0.5rem;
 }
@@ -758,12 +905,29 @@ video {
   gap: 0.75rem;
 }
 
+.gap-4 {
+  gap: 1rem;
+}
+
 .gap-9 {
   gap: 2.25rem;
 }
 
+.gap-x-5 {
+  -moz-column-gap: 1.25rem;
+       column-gap: 1.25rem;
+}
+
+.gap-y-8 {
+  row-gap: 2rem;
+}
+
 .overflow-hidden {
   overflow: hidden;
+}
+
+.rounded-2xl {
+  border-radius: 1rem;
 }
 
 .rounded-3xl {
@@ -778,9 +942,41 @@ video {
   border-radius: 0.75rem;
 }
 
+.border {
+  border-width: 1px;
+}
+
+.border-b {
+  border-bottom-width: 1px;
+}
+
+.border-solid {
+  border-style: solid;
+}
+
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
+.border-\[\#f1556b\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(241 85 107 / var(--tw-border-opacity));
+}
+
+.bg-\[\#15212a\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(21 33 42 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#f1556b\] {
   --tw-bg-opacity: 1;
   background-color: rgb(241 85 107 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#f6f6f6\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(246 246 246 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#fdd700\] {
@@ -788,13 +984,34 @@ video {
   background-color: rgb(253 215 0 / var(--tw-bg-opacity));
 }
 
+.bg-transparent {
+  background-color: transparent;
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .p-3 {
   padding: 0.75rem;
+}
+
+.p-\[30px\] {
+  padding: 30px;
+}
+
+.p-5 {
+  padding: 1.25rem;
+}
+
+.p-\[15px\] {
+  padding: 15px;
 }
 
 .px-3 {
@@ -807,6 +1024,16 @@ video {
   padding-right: 1rem;
 }
 
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -817,6 +1044,16 @@ video {
   padding-bottom: 0.625rem;
 }
 
+.py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -825,6 +1062,40 @@ video {
 .py-\[15px\] {
   padding-top: 15px;
   padding-bottom: 15px;
+}
+
+.py-\[50px\] {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.pt-\[80px\] {
+  padding-top: 80px;
+}
+
+.pb-\[15px\] {
+  padding-bottom: 15px;
+}
+
+.pb-7 {
+  padding-bottom: 1.75rem;
+}
+
+.pb-8 {
+  padding-bottom: 2rem;
+}
+
+.pb-5 {
+  padding-bottom: 1.25rem;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-\[\.91rem\] {
@@ -839,8 +1110,22 @@ video {
   font-size: 15px;
 }
 
+.text-\[22px\] {
+  font-size: 22px;
+}
+
 .text-\[3\.5rem\] {
   font-size: 3.5rem;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .text-xl {
@@ -848,12 +1133,46 @@ video {
   line-height: 1.75rem;
 }
 
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.text-\[19px\] {
+  font-size: 19px;
+}
+
+.text-\[17px\] {
+  font-size: 17px;
+}
+
+.text-\[18px\] {
+  font-size: 18px;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.font-light {
+  font-weight: 300;
+}
+
 .font-medium {
   font-weight: 500;
 }
 
+.font-normal {
+  font-weight: 400;
+}
+
 .font-semibold {
   font-weight: 600;
+}
+
+.font-bold {
+  font-weight: 700;
 }
 
 .leading-\[1\.2\] {
@@ -870,6 +1189,25 @@ video {
 
 .leading-\[1\] {
   line-height: 1;
+}
+
+.leading-\[22px\] {
+  line-height: 22px;
+}
+
+.text-\[\#252525\] {
+  --tw-text-opacity: 1;
+  color: rgb(37 37 37 / var(--tw-text-opacity));
+}
+
+.text-\[\#313131\] {
+  --tw-text-opacity: 1;
+  color: rgb(49 49 49 / var(--tw-text-opacity));
+}
+
+.text-\[\#444444\] {
+  --tw-text-opacity: 1;
+  color: rgb(68 68 68 / var(--tw-text-opacity));
 }
 
 .text-\[gray\] {
@@ -892,6 +1230,25 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-\[\#222032\] {
+  --tw-text-opacity: 1;
+  color: rgb(34 32 50 / var(--tw-text-opacity));
+}
+
+.text-\[\#5b586e\] {
+  --tw-text-opacity: 1;
+  color: rgb(91 88 110 / var(--tw-text-opacity));
+}
+
+.text-\[\#\] {
+  color: #;
+}
+
+.text-\[\#f1556b\] {
+  --tw-text-opacity: 1;
+  color: rgb(241 85 107 / var(--tw-text-opacity));
+}
+
 .opacity-50 {
   opacity: 0.5;
 }
@@ -907,10 +1264,37 @@ video {
   color: rgb(241 85 107 / var(--tw-text-opacity));
 }
 
+.hover\:text-\[\#fdd700\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(253 215 0 / var(--tw-text-opacity));
+}
+
 @media (min-width: 640px) {
   .sm\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
+  }
+}
+
+@media (min-width: 991px) {
+  .min-991px\:flex {
+    display: flex;
+  }
+
+  .min-991px\:w-\[40\%\] {
+    width: 40%;
+  }
+
+  .min-991px\:w-\[60\%\] {
+    width: 60%;
+  }
+
+  .min-991px\:w-\[890px\] {
+    width: 890px;
+  }
+
+  .min-991px\:flex-row {
+    flex-direction: row;
   }
 }
 
