--- a/style/custom.css
+++ b/style/custom.css
@@ -271,11 +271,11 @@ display: none;
     }
 }
 
-.services-container {
+/* .services-container {
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
-    grid-gap: 10px;
-}
+    grid-gap: 20px;
+} */
 
 .shadow-card {
     box-shadow: 0 5px 15px 0 hsla(0,0%,43%,.1);
@@ -289,4 +289,172 @@ display: none;
     height: 6px;
     border-radius: 25px;
     background: linear-gradient(89deg,#ec1c3a 3%,#f1556b 98%);
+}
+
+
+
+
+
+.services-card-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 40px;
+    padding: 20px;
+    background-color: #f6f6f6;
+}
+
+
+.serv-card {
+    box-shadow: 0 12px 20px 0 rgb(0 0 0 / 13%), 0 2px 4px 0 rgb(0 0 0 / 12%);
+    transition: all .3s;
+    position: relative;
+    counter-increment: services;
+}
+.serv-card:hover {
+    transform: translateY(-10px);
+}
+
+.serv-card::before {
+    content: "";
+    left: 50%;
+    transform: translateX(-50%);
+    height: 3px;
+    top: -3px;
+    background-color: #f1556b;
+    position: absolute;
+    width: 0;
+    transition: .3s;
+}
+.serv-card:hover::before {
+    width: 100%;
+}
+.serv-card .img {
+    margin: 30px auto 20px;
+    display: block;
+    text-align: center;
+    color: #d5d5d5;
+    width: 64px;
+    height: 64px;
+}
+.serv-card .img img {
+    width: 100%;
+    height: 100%;
+}
+.serv-card h3{
+    text-align: center;
+    margin: 20px 0 40px;
+    font-size: 23px;
+    font-weight: 600;
+    color: #f1556b;
+}
+.serv-card .info{
+    padding: 15px;
+    position: relative;
+    background-color: #f9f9f9;
+    text-align: right;
+}
+.serv-card .info::before {
+    content: "0" counter(services);
+    /* content: "0"; */
+    position: absolute;
+    background-color: #f1556b;
+    color: white;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 85px;
+    font-size: 30px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-right: 15px;
+}
+
+.serv-card .info::after {
+    content: "";
+    position: absolute;
+    background-color: #d5d5d5;
+    top: 0;
+    left: 71px;
+    width: 50px;
+    height: calc(100% + 0.4px);
+    transform: skewX(-30deg);
+}
+.serv-card .info a {
+    /* background-color: #f9f9f9; */
+    color: #f1556b;
+    font-weight: 600;
+}
+
+
+.triangle {
+    content: "";
+    display: block;
+    border: 1.2em solid transparent;
+    border-bottom-color: #f1556b;
+    position: absolute;
+    left: calc(50% - 1.2em);
+    bottom: 0;
+}
+
+.step-card-header::before {
+        content: "";
+        position: absolute;
+        display: block;
+        height: 4px;
+        width: 100%;
+        left: 0;
+        bottom: 48px;
+        z-index: 0 !important;
+        background-color: #f1556b;
+}
+
+
+
+.swiper {
+    width: 100%;
+    height: auto;
+    padding-bottom: 20px;
+  }
+
+  /* .swiper-slide {
+    width: 273px !important;
+    margin-left: 0 !important;
+  } */
+.swiper-button-prev::after,
+.swiper-button-next::after {
+    display: none;
+}
+.swiper-button-prev{
+    width: 50px;
+    height: 50px;
+    padding: 9px;
+    display: flex;
+    color: #fff;
+    background: #f1556b;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    top: 13%;
+    right: 0px !important;
+    box-shadow: -3px 1px 13px -3px rgba(000,000,000,0.5);
+}
+
+.swiper-button-next{
+    width: 50px;
+    height: 50px;
+    padding: 9px;
+    display: flex;
+    color: #fff;
+    background: #f1556b;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    top: 13%;
+    left: 0px !important;
+    box-shadow: 3px 1px 13px -3px rgba(000,000,000,0.5);
+}
+.swiper-pagination {
+    bottom: 0 !important;
 }
