--- a/style/output.css
+++ b/style/output.css
@@ -632,12 +632,12 @@ video {
   position: relative;
 }
 
-.-top-full {
-  top: -100%;
-}
-
 .bottom-5 {
   bottom: 1.25rem;
+}
+
+.bottom-\[27\%\] {
+  bottom: 27%;
 }
 
 .left-5 {
@@ -646,6 +646,10 @@ video {
 
 .top-1\.5 {
   top: 0.375rem;
+}
+
+.top-\[-110\%\] {
+  top: -110%;
 }
 
 .top-\[110\%\] {
@@ -660,10 +664,6 @@ video {
   z-index: 20000;
 }
 
-.m-auto {
-  margin: auto;
-}
-
 .mb-12 {
   margin-bottom: 3rem;
 }
@@ -674,10 +674,6 @@ video {
 
 .mb-2\.5 {
   margin-bottom: 0.625rem;
-}
-
-.mb-\[15px\] {
-  margin-bottom: 15px;
 }
 
 .me-0\.5 {
@@ -708,6 +704,10 @@ video {
   display: none;
 }
 
+.h-10 {
+  height: 2.5rem;
+}
+
 .h-11 {
   height: 2.75rem;
 }
@@ -724,12 +724,20 @@ video {
   height: 1.5rem;
 }
 
-.h-\[185px\] {
-  height: 185px;
+.h-\[118px\] {
+  height: 118px;
+}
+
+.h-\[224px\] {
+  height: 224px;
 }
 
 .h-\[3px\] {
   height: 3px;
+}
+
+.h-\[87px\] {
+  height: 87px;
 }
 
 .h-dvh {
@@ -742,6 +750,10 @@ video {
 
 .min-h-dvh {
   min-height: 100dvh;
+}
+
+.w-10 {
+  width: 2.5rem;
 }
 
 .w-11 {
@@ -780,8 +792,8 @@ video {
   width: 34%;
 }
 
-.w-\[45\%\] {
-  width: 45%;
+.w-\[60\%\] {
+  width: 60%;
 }
 
 .w-\[690px\] {
@@ -823,6 +835,10 @@ video {
 
 .flex-col-reverse {
   flex-direction: column-reverse;
+}
+
+.flex-nowrap {
+  flex-wrap: nowrap;
 }
 
 .items-start {
@@ -894,12 +910,20 @@ video {
   overflow: hidden;
 }
 
-.rounded-2xl {
-  border-radius: 1rem;
+.overflow-x-auto {
+  overflow-x: auto;
 }
 
 .rounded-3xl {
   border-radius: 1.5rem;
+}
+
+.rounded-full {
+  border-radius: 9999px;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
 }
 
 .rounded-md {
@@ -908,6 +932,19 @@ video {
 
 .rounded-xl {
   border-radius: 0.75rem;
+}
+
+.border {
+  border-width: 1px;
+}
+
+.border-solid {
+  border-style: solid;
+}
+
+.border-\[\#f1556b\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(241 85 107 / var(--tw-border-opacity));
 }
 
 .bg-\[\#15212a\] {
@@ -925,6 +962,11 @@ video {
   background-color: rgb(246 246 246 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#f9f9f9\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 249 249 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#fdd700\] {
   --tw-bg-opacity: 1;
   background-color: rgb(253 215 0 / var(--tw-bg-opacity));
@@ -939,21 +981,30 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.object-cover {
-  -o-object-fit: cover;
-     object-fit: cover;
+.fill-white {
+  fill: #fff;
+}
+
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .p-3 {
   padding: 0.75rem;
 }
 
-.p-5 {
-  padding: 1.25rem;
+.p-3\.5 {
+  padding: 0.875rem;
 }
 
 .p-\[30px\] {
   padding: 30px;
+}
+
+.px-2\.5 {
+  padding-left: 0.625rem;
+  padding-right: 0.625rem;
 }
 
 .px-3 {
@@ -1015,12 +1066,8 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.pb-8 {
-  padding-bottom: 2rem;
-}
-
-.pb-\[15px\] {
-  padding-bottom: 15px;
+.pt-3\.5 {
+  padding-top: 0.875rem;
 }
 
 .pt-\[80px\] {
@@ -1045,6 +1092,10 @@ video {
   font-size: .91rem;
 }
 
+.text-\[1\.2rem\] {
+  font-size: 1.2rem;
+}
+
 .text-\[13px\] {
   font-size: 13px;
 }
@@ -1053,8 +1104,8 @@ video {
   font-size: 15px;
 }
 
-.text-\[18px\] {
-  font-size: 18px;
+.text-\[17px\] {
+  font-size: 17px;
 }
 
 .text-\[22px\] {
@@ -1138,11 +1189,6 @@ video {
 .text-\[\#444444\] {
   --tw-text-opacity: 1;
   color: rgb(68 68 68 / var(--tw-text-opacity));
-}
-
-.text-\[\#5b586e\] {
-  --tw-text-opacity: 1;
-  color: rgb(91 88 110 / var(--tw-text-opacity));
 }
 
 .text-\[\#f1556b\] {
