--- a/style/output.css
+++ b/style/output.css
@@ -604,6 +604,31 @@ video {
   border-radius: 50px;
   font-weight: 500;
   line-height: 1.5;
+  transition-duration: 0.6s;
+  border-color: transparent;
+}
+
+.btn::before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  height: 100%;
+  left: -36%;
+  top: 0;
+  transform: skew(50deg);
+  transition-duration: 0.6s;
+  transform-origin: top left;
+  width: 0;
+}
+
+.btn:hover::before {
+  height: 100%;
+  width: 135%;
+  background-color: #252525;
+}
+
+.btn:hover {
+  color: #fff;
 }
 
 .drop-menu-shadow {
@@ -632,6 +657,14 @@ video {
   position: relative;
 }
 
+.-bottom-20 {
+  bottom: -5rem;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
 .bottom-5 {
   bottom: 1.25rem;
 }
@@ -640,8 +673,12 @@ video {
   bottom: 27%;
 }
 
-.left-5 {
-  left: 1.25rem;
+.right-0 {
+  right: 0px;
+}
+
+.top-0 {
+  top: 0px;
 }
 
 .top-1\.5 {
@@ -656,12 +693,24 @@ video {
   top: 110%;
 }
 
+.top-\[60\%\] {
+  top: 60%;
+}
+
+.z-0 {
+  z-index: 0;
+}
+
 .z-\[1000\] {
   z-index: 1000;
 }
 
 .z-\[20000\] {
   z-index: 20000;
+}
+
+.m-auto {
+  margin: auto;
 }
 
 .mb-12 {
@@ -674,6 +723,22 @@ video {
 
 .mb-2\.5 {
   margin-bottom: 0.625rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
+.mb-\[30px\] {
+  margin-bottom: 30px;
+}
+
+.mb-\[5px\] {
+  margin-bottom: 5px;
 }
 
 .me-0\.5 {
@@ -716,6 +781,10 @@ video {
   height: 0.875rem;
 }
 
+.h-36 {
+  height: 9rem;
+}
+
 .h-5 {
   height: 1.25rem;
 }
@@ -732,12 +801,24 @@ video {
   height: 224px;
 }
 
+.h-\[340px\] {
+  height: 340px;
+}
+
 .h-\[3px\] {
   height: 3px;
 }
 
+.h-\[45px\] {
+  height: 45px;
+}
+
 .h-\[87px\] {
   height: 87px;
+}
+
+.h-auto {
+  height: auto;
 }
 
 .h-dvh {
@@ -772,6 +853,10 @@ video {
   width: 75%;
 }
 
+.w-36 {
+  width: 9rem;
+}
+
 .w-5 {
   width: 1.25rem;
 }
@@ -792,12 +877,20 @@ video {
   width: 34%;
 }
 
+.w-\[45px\] {
+  width: 45px;
+}
+
 .w-\[60\%\] {
   width: 60%;
 }
 
 .w-\[690px\] {
   width: 690px;
+}
+
+.w-\[90\%\] {
+  width: 90%;
 }
 
 .w-\[90px\] {
@@ -819,6 +912,16 @@ video {
 
 .flex-\[66\.6\%\] {
   flex: 66.6%;
+}
+
+.-rotate-180 {
+  --tw-rotate: -180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-180 {
+  --tw-rotate: 180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .transform {
@@ -934,6 +1037,14 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded-ee-md {
+  border-end-end-radius: 0.375rem;
+}
+
+.rounded-ss-\[30px\] {
+  border-start-start-radius: 30px;
+}
+
 .border {
   border-width: 1px;
 }
@@ -952,6 +1063,26 @@ video {
   background-color: rgb(21 33 42 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#25D366\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 211 102 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#cc292a\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(204 41 42 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#ebbfc5\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(235 191 197 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#efefef\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 239 239 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#f1556b\] {
   --tw-bg-opacity: 1;
   background-color: rgb(241 85 107 / var(--tw-bg-opacity));
@@ -967,9 +1098,9 @@ video {
   background-color: rgb(249 249 249 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#fdd700\] {
+.bg-\[\#ffc221\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(253 215 0 / var(--tw-bg-opacity));
+  background-color: rgb(255 194 33 / var(--tw-bg-opacity));
 }
 
 .bg-transparent {
@@ -981,6 +1112,10 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.fill-\[\#f1556b\] {
+  fill: #f1556b;
+}
+
 .fill-white {
   fill: #fff;
 }
@@ -990,12 +1125,26 @@ video {
      object-fit: contain;
 }
 
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.object-center {
+  -o-object-position: center;
+     object-position: center;
+}
+
 .p-3 {
   padding: 0.75rem;
 }
 
 .p-3\.5 {
   padding: 0.875rem;
+}
+
+.p-5 {
+  padding: 1.25rem;
 }
 
 .p-\[30px\] {
@@ -1216,6 +1365,14 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.opacity-0 {
+  opacity: 0;
+}
+
+.opacity-10 {
+  opacity: 0.1;
+}
+
 .opacity-50 {
   opacity: 0.5;
 }
@@ -1231,15 +1388,25 @@ video {
   color: rgb(241 85 107 / var(--tw-text-opacity));
 }
 
-.hover\:text-\[\#fdd700\]:hover {
+.hover\:text-\[\#ffc221\]:hover {
   --tw-text-opacity: 1;
-  color: rgb(253 215 0 / var(--tw-text-opacity));
+  color: rgb(255 194 33 / var(--tw-text-opacity));
 }
 
 @media (min-width: 640px) {
   .sm\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
+  }
+}
+
+@media (min-width: 768px) {
+  .md\:block {
+    display: block;
+  }
+
+  .md\:flex {
+    display: flex;
   }
 }
 
@@ -1269,6 +1436,48 @@ video {
   left: 0px;
 }
 
+.ltr\:left-1\/2:where([dir="ltr"], [dir="ltr"] *) {
+  left: 50%;
+}
+
+.ltr\:left-5:where([dir="ltr"], [dir="ltr"] *) {
+  left: 1.25rem;
+}
+
+.ltr\:right-0:where([dir="ltr"], [dir="ltr"] *) {
+  right: 0px;
+}
+
+.ltr\:right-5:where([dir="ltr"], [dir="ltr"] *) {
+  right: 1.25rem;
+}
+
+.ltr\:-translate-x-2\/4:where([dir="ltr"], [dir="ltr"] *) {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rtl\:left-0:where([dir="rtl"], [dir="rtl"] *) {
+  left: 0px;
+}
+
+.rtl\:left-5:where([dir="rtl"], [dir="rtl"] *) {
+  left: 1.25rem;
+}
+
 .rtl\:right-0:where([dir="rtl"], [dir="rtl"] *) {
   right: 0px;
+}
+
+.rtl\:right-1\/2:where([dir="rtl"], [dir="rtl"] *) {
+  right: 50%;
+}
+
+.rtl\:right-5:where([dir="rtl"], [dir="rtl"] *) {
+  right: 1.25rem;
+}
+
+.rtl\:translate-x-2\/4:where([dir="rtl"], [dir="rtl"] *) {
+  --tw-translate-x: 50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
