--- a/style/custom.css
+++ b/style/custom.css
@@ -2,7 +2,10 @@ body {
     font-family: tajawal,sans-serif!important;
     line-height: 1;
 }
-
+body::selection {
+    background-color: #f1556b;
+    color: #fff;
+}
 .container {
     width: 100%;
 }
@@ -543,3 +546,38 @@ color: #f1556b;
     background-image: url('../images/motpath-w2.svg');
     background-size: 250px;
 }
+
+/* //* /////////////////////////////////////// */
+.circular-progress {
+    --progress:50;
+    --size: 250px;
+    --half-size: calc(var(--size) / 2);
+    --stroke-width: 10px;
+    --radius: calc((var(--size) - var(--stroke-width)) / 2);
+    --circumference: calc(var(--radius) * pi * 2);
+    --dash: calc((var(--progress) * var(--circumference)) / 100);
+    animation: progress-animation 5s linear 0s 1 forwards;
+  }
+  
+  .circular-progress circle {
+    cx: var(--half-size);
+    cy: var(--half-size);
+    r: var(--radius);
+    stroke-width: var(--stroke-width);
+    fill: none;
+    stroke-linecap: round;
+  }
+  
+  .circular-progress circle.bg {
+    stroke: #ddd;
+  }
+  
+  .circular-progress circle.fg {
+    transform: rotate(-90deg);
+    transform-origin: var(--half-size) var(--half-size);
+    stroke-dasharray: var(--dash) calc(var(--circumference) - var(--dash));
+    transition: stroke-dasharray 0.3s linear 0s;
+    stroke: #f1556b ;
+    /* stroke: #5394fd; */
+  }
+  
