--- a/style/output.css
+++ b/style/output.css
@@ -558,6 +558,12 @@ video {
   width: 100%;
 }
 
+@media (min-width: 578px) {
+  .container {
+    max-width: 578px;
+  }
+}
+
 @media (min-width: 640px) {
   .container {
     max-width: 640px;
@@ -753,6 +759,10 @@ video {
   margin-top: 1.25rem;
 }
 
+.mt-9 {
+  margin-top: 2.25rem;
+}
+
 .block {
   display: block;
 }
@@ -785,6 +795,10 @@ video {
   height: 9rem;
 }
 
+.h-40 {
+  height: 10rem;
+}
+
 .h-5 {
   height: 1.25rem;
 }
@@ -795,6 +809,10 @@ video {
 
 .h-\[118px\] {
   height: 118px;
+}
+
+.h-\[120px\] {
+  height: 120px;
 }
 
 .h-\[224px\] {
@@ -857,6 +875,10 @@ video {
   width: 9rem;
 }
 
+.w-40 {
+  width: 10rem;
+}
+
 .w-5 {
   width: 1.25rem;
 }
@@ -867,6 +889,10 @@ video {
 
 .w-9 {
   width: 2.25rem;
+}
+
+.w-\[120px\] {
+  width: 120px;
 }
 
 .w-\[265px\] {
@@ -908,6 +934,14 @@ video {
 
 .max-w-\[780px\] {
   max-width: 780px;
+}
+
+.flex-\[100\%\] {
+  flex: 100%;
+}
+
+.flex-\[30\%\] {
+  flex: 30%;
 }
 
 .flex-\[66\.6\%\] {
@@ -996,8 +1030,20 @@ video {
   gap: 1rem;
 }
 
+.gap-6 {
+  gap: 1.5rem;
+}
+
 .gap-9 {
   gap: 2.25rem;
+}
+
+.gap-5 {
+  gap: 1.25rem;
+}
+
+.gap-8 {
+  gap: 2rem;
 }
 
 .gap-x-5 {
@@ -1007,6 +1053,10 @@ video {
 
 .gap-y-8 {
   row-gap: 2rem;
+}
+
+.self-stretch {
+  align-self: stretch;
 }
 
 .overflow-hidden {
@@ -1051,6 +1101,11 @@ video {
 
 .border-solid {
   border-style: solid;
+}
+
+.border-\[\#d8d8d8\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(216 216 216 / var(--tw-border-opacity));
 }
 
 .border-\[\#f1556b\] {
@@ -1261,6 +1316,10 @@ video {
   font-size: 22px;
 }
 
+.text-\[27px\] {
+  font-size: 27px;
+}
+
 .text-\[3\.5rem\] {
   font-size: 3.5rem;
 }
@@ -1268,6 +1327,11 @@ video {
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .text-sm {
@@ -1305,6 +1369,10 @@ video {
   font-weight: 600;
 }
 
+.leading-7 {
+  line-height: 1.75rem;
+}
+
 .leading-\[1\.2\] {
   line-height: 1.2;
 }
@@ -1323,6 +1391,16 @@ video {
 
 .leading-\[22px\] {
   line-height: 22px;
+}
+
+.text-\[\#181b22\] {
+  --tw-text-opacity: 1;
+  color: rgb(24 27 34 / var(--tw-text-opacity));
+}
+
+.text-\[\#212122\] {
+  --tw-text-opacity: 1;
+  color: rgb(33 33 34 / var(--tw-text-opacity));
 }
 
 .text-\[\#252525\] {
@@ -1393,7 +1471,21 @@ video {
   color: rgb(255 194 33 / var(--tw-text-opacity));
 }
 
+@media (min-width: 578px) {
+  .min-578px\:flex-row {
+    flex-direction: row;
+  }
+
+  .min-578px\:gap-0 {
+    gap: 0px;
+  }
+}
+
 @media (min-width: 640px) {
+  .sm\:flex-row {
+    flex-direction: row;
+  }
+
   .sm\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
@@ -1401,16 +1493,16 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:block {
-    display: block;
-  }
-
   .md\:flex {
     display: flex;
   }
 }
 
 @media (min-width: 991px) {
+  .min-991px\:mt-0 {
+    margin-top: 0px;
+  }
+
   .min-991px\:flex {
     display: flex;
   }
@@ -1427,8 +1519,16 @@ video {
     width: 890px;
   }
 
+  .min-991px\:flex-\[70\%\] {
+    flex: 70%;
+  }
+
   .min-991px\:flex-row {
     flex-direction: row;
+  }
+
+  .min-991px\:gap-8 {
+    gap: 2rem;
   }
 }
 
