--- a/style/output.css
+++ b/style/output.css
@@ -735,6 +735,10 @@ video {
   margin-bottom: 1rem;
 }
 
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
 .mb-6 {
   margin-bottom: 1.5rem;
 }
@@ -823,6 +827,10 @@ video {
   height: 340px;
 }
 
+.h-\[39px\] {
+  height: 39px;
+}
+
 .h-\[3px\] {
   height: 3px;
 }
@@ -895,12 +903,20 @@ video {
   width: 120px;
 }
 
+.w-\[215px\] {
+  width: 215px;
+}
+
 .w-\[265px\] {
   width: 265px;
 }
 
 .w-\[34\%\] {
   width: 34%;
+}
+
+.w-\[41px\] {
+  width: 41px;
 }
 
 .w-\[45px\] {
@@ -974,6 +990,10 @@ video {
   flex-direction: column-reverse;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 .flex-nowrap {
   flex-wrap: nowrap;
 }
@@ -1034,16 +1054,12 @@ video {
   gap: 1.5rem;
 }
 
-.gap-9 {
-  gap: 2.25rem;
-}
-
-.gap-5 {
-  gap: 1.25rem;
-}
-
 .gap-8 {
   gap: 2rem;
+}
+
+.gap-9 {
+  gap: 2.25rem;
 }
 
 .gap-x-5 {
@@ -1065,6 +1081,10 @@ video {
 
 .overflow-x-auto {
   overflow-x: auto;
+}
+
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .rounded-3xl {
@@ -1108,9 +1128,9 @@ video {
   border-color: rgb(216 216 216 / var(--tw-border-opacity));
 }
 
-.border-\[\#f1556b\] {
+.border-\[\#f71938\] {
   --tw-border-opacity: 1;
-  border-color: rgb(241 85 107 / var(--tw-border-opacity));
+  border-color: rgb(247 25 56 / var(--tw-border-opacity));
 }
 
 .bg-\[\#15212a\] {
@@ -1138,14 +1158,14 @@ video {
   background-color: rgb(239 239 239 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#f1556b\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(241 85 107 / var(--tw-bg-opacity));
-}
-
 .bg-\[\#f6f6f6\] {
   --tw-bg-opacity: 1;
   background-color: rgb(246 246 246 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#f71938\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 25 56 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#f9f9f9\] {
@@ -1167,8 +1187,8 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.fill-\[\#f1556b\] {
-  fill: #f1556b;
+.fill-\[\#f71938\] {
+  fill: #f71938;
 }
 
 .fill-white {
@@ -1418,9 +1438,14 @@ video {
   color: rgb(68 68 68 / var(--tw-text-opacity));
 }
 
-.text-\[\#f1556b\] {
+.text-\[\#b5b5b5\] {
   --tw-text-opacity: 1;
-  color: rgb(241 85 107 / var(--tw-text-opacity));
+  color: rgb(181 181 181 / var(--tw-text-opacity));
+}
+
+.text-\[\#f71938\] {
+  --tw-text-opacity: 1;
+  color: rgb(247 25 56 / var(--tw-text-opacity));
 }
 
 .text-\[gray\] {
@@ -1461,9 +1486,9 @@ video {
   transition-duration: 150ms;
 }
 
-.hover\:text-\[\#f1556b\]:hover {
+.hover\:text-\[\#f71938\]:hover {
   --tw-text-opacity: 1;
-  color: rgb(241 85 107 / var(--tw-text-opacity));
+  color: rgb(247 25 56 / var(--tw-text-opacity));
 }
 
 .hover\:text-\[\#ffc221\]:hover {
@@ -1482,10 +1507,6 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:flex-row {
-    flex-direction: row;
-  }
-
   .sm\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
