--- a/style/custom.css
+++ b/style/custom.css
@@ -3,7 +3,7 @@ body {
     line-height: 1;
 }
 body::selection {
-    background-color: #f71938;
+    background-color: #f1556b;
     color: #fff;
 }
 .container {
@@ -74,7 +74,7 @@ header{
 
 .nab-back {
     box-shadow: 0 2px 8px 0 rgba(62, 62, 79, 0.23);
-    /* background: linear-gradient(89deg, #ec1c3a 3%, #f71938 98%); */
+    /* background: linear-gradient(89deg, #ec1c3a 3%, #f1556b 98%); */
     background-color: transparent;
 }
 .desktop-nav {
@@ -135,7 +135,7 @@ display: none;
     }
 }
 .nab-back.fixed-nav {
-    background: linear-gradient(89deg, #ec1c3a 3%, #f71938 98%);
+    background: linear-gradient(89deg, #ec1c3a 3%, #f1556b 98%);
 }
 
 .st0,
@@ -290,7 +290,7 @@ display: none;
     width: 70%;
     height: 6px;
     border-radius: 25px;
-    background: linear-gradient(89deg,#ec1c3a 3%,#f71938 98%);
+    background: linear-gradient(89deg,#ec1c3a 3%,#f1556b 98%);
 }
 
 
@@ -322,7 +322,7 @@ display: none;
     transform: translateX(-50%);
     height: 3px;
     top: -3px;
-    background-color: #f71938;
+    background-color: #f1556b;
     position: absolute;
     width: 0;
     transition: .3s;
@@ -347,7 +347,7 @@ display: none;
     margin: 20px 0 40px;
     font-size: 23px;
     font-weight: 600;
-    color: #f71938;
+    color: #f1556b;
 }
 .serv-card .info{
     padding: 15px;
@@ -359,7 +359,7 @@ display: none;
     content: "0" counter(services);
     /* content: "0"; */
     position: absolute;
-    background-color: #f71938;
+    background-color: #f1556b;
     color: white;
     left: 0;
     top: 0;
@@ -385,7 +385,7 @@ display: none;
 }
 .serv-card .info a {
     /* background-color: #f9f9f9; */
-    color: #f71938;
+    color: #f1556b;
     font-weight: 600;
 }
 
@@ -394,7 +394,7 @@ display: none;
     content: "";
     display: block;
     border: 1.2em solid transparent;
-    border-bottom-color: #f71938;
+    border-bottom-color: #f1556b;
     position: absolute;
     left: calc(50% - 1.2em);
     bottom: 0;
@@ -409,7 +409,7 @@ display: none;
         left: 0;
         bottom: 48px;
         z-index: 0 !important;
-        background-color: #f71938;
+        background-color: #f1556b;
 }
 
 
@@ -520,11 +520,11 @@ display: none;
     line-height: 1.3;
 }
 .our-work-card:hover .our-work-card-name{
-color: #f71938;
+color: #f1556b;
 }
 .our-work-card:hover .our-work-card-arrow {
     fill:#ffffff ;
-    background-color: #f71938;
+    background-color: #f1556b;
 }
 
 .our-work-card__title {
@@ -580,7 +580,7 @@ color: #f71938;
     transform-origin: var(--half-size) var(--half-size);
     stroke-dasharray: var(--dash) calc(var(--circumference) - var(--dash));
     transition: stroke-dasharray 0.3s linear 0s;
-    stroke: #f71938;
+    stroke: #f1556b;
     /* stroke: #5394fd; */
 
 }
