--- a/style/output.css
+++ b/style/output.css
@@ -859,6 +859,10 @@ video {
   min-height: 100dvh;
 }
 
+.w-1\/2 {
+  width: 50%;
+}
+
 .w-10 {
   width: 2.5rem;
 }
@@ -1128,9 +1132,9 @@ video {
   border-color: rgb(216 216 216 / var(--tw-border-opacity));
 }
 
-.border-\[\#f71938\] {
+.border-\[\#f1556b\] {
   --tw-border-opacity: 1;
-  border-color: rgb(247 25 56 / var(--tw-border-opacity));
+  border-color: rgb(241 85 107 / var(--tw-border-opacity));
 }
 
 .bg-\[\#15212a\] {
@@ -1158,14 +1162,14 @@ video {
   background-color: rgb(239 239 239 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#f1556b\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 85 107 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#f6f6f6\] {
   --tw-bg-opacity: 1;
   background-color: rgb(246 246 246 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#f71938\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(247 25 56 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#f9f9f9\] {
@@ -1187,8 +1191,8 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.fill-\[\#f71938\] {
-  fill: #f71938;
+.fill-\[\#f1556b\] {
+  fill: #f1556b;
 }
 
 .fill-white {
@@ -1292,6 +1296,10 @@ video {
 
 .pt-3\.5 {
   padding-top: 0.875rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
 }
 
 .pt-\[80px\] {
@@ -1443,9 +1451,9 @@ video {
   color: rgb(181 181 181 / var(--tw-text-opacity));
 }
 
-.text-\[\#f71938\] {
+.text-\[\#f1556b\] {
   --tw-text-opacity: 1;
-  color: rgb(247 25 56 / var(--tw-text-opacity));
+  color: rgb(241 85 107 / var(--tw-text-opacity));
 }
 
 .text-\[gray\] {
@@ -1486,9 +1494,9 @@ video {
   transition-duration: 150ms;
 }
 
-.hover\:text-\[\#f71938\]:hover {
+.hover\:text-\[\#f1556b\]:hover {
   --tw-text-opacity: 1;
-  color: rgb(247 25 56 / var(--tw-text-opacity));
+  color: rgb(241 85 107 / var(--tw-text-opacity));
 }
 
 .hover\:text-\[\#ffc221\]:hover {
